--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
     "react-router": "7.12.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
