--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "isbot": "^5.1.31",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.8",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
